--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
  <br>
  <br>
  <br>
- <form class="submission-form" action="mailto:mateoseigal06@gmail.com">
+ <form class="submission-form" action="mailto:planehubpremium@gmail.com">
    <h1 class="contact-us">Contact Us</h1>
    <p class="contact-desc">Please use the form below to contact us if you have any questions/suggestions and we will get back to you as soon as possible</p>
-   <p class="contact-desc">*Disclaimer: Contact Form does not work on phoone*</p>
+   <p class="contact-desc">*Disclaimer: Contact Form does not work on phone*</p>
    <br>
    <label for="First Name">First Name</label>
    <input type="text" placeholder="First Name" id="first-name">
