hall of fame prettier

--- a/hall of fame.html
+++ b/hall of fame.html
@@ -2,210 +2,155 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Plane Hub Premium | Hall Of Fame</title>
- <link rel="stylesheet" href="style.css">
- <link rel="stylesheet" href="style2.scss">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Plane Hub Premium | Hall Of Fame</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.scss">
 </head>
 
 <body>
- <div id="navbar">
+<div id="navbar">
   <a href="hall of fame.html">Hall Of Fame</a>
   <a href="contact.html">Contact</a>
   <a href="submit.html">Submit</a>
   <a href="index.html">Home</a>
- </div>
- <script>
+</div>
+<script>
   window.onscroll = function () { myFunction() };
 
   var navbar = document.getElementById("navbar");
   var sticky = navbar.offsetTop;
 
   function myFunction() {
-   if (window.pageYOffset >= sticky) {
+  if (window.pageYOffset >= sticky) {
     navbar.classList.add("sticky")
-   } else {
+  } else {
     navbar.classList.remove("sticky");
-   }
   }
- </script>
+  }
+</script>
   <br>
   <br>
   <h1>Hall Of Fame</h1>
-  <table class="halloffame">
-   <tr>
-    <td>
-     January 2021
+  <div style="overflow-x:auto;">
+  <table class="hometable">
+  <tr>
+    <td class="tableinfo">
+      January 2021
+      <br>
+      <img src="images/meme here.png" class="tableimage">
+      <br>
+      Winner's Name
+      <br>
+      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
-    <td>
-     February 2021
+    <td class="tableinfo">
+        January 2021
+        <br>
+        <img src="images/meme here.png" class="tableimage">
+        <br>
+        Winner's Name
+        <br>
+        <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
-    <td>
-     March 2021
+    <td class="tableinfo">
+      January 2021
+      <br>
+      <img src="images/meme here.png" class="tableimage">
+      <br>
+      Winner's Name
+      <br>
+      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
-    <td>
-     April 2021
+    <td class="tableinfo">
+      January 2021
+      <br>
+      <img src="images/meme here.png" class="tableimage">
+      <br>
+      Winner's Name
+      <br>
+      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
-   </tr>
-   <tr>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
+  </tr>
+  <tr>
+    <td class="tableinfo">
+      January 2021
+      <br>
+      <img src="images/meme here.png" class="tableimage">
+      <br>
+      Winner's Name
+      <br>
+      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
+    <td class="tableinfo">
+      January 2021
+      <br>
+      <img src="images/meme here.png" class="tableimage">
+      <br>
+      Winner's Name
+      <br>
+      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
+    <td class="tableinfo">
+      January 2021
+      <br>
+      <img src="images/meme here.png" class="tableimage">
+      <br>
+      Winner's Name
+      <br>
+      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
+    <td class="tableinfo">
+      January 2021
+      <br>
+      <img src="images/meme here.png" class="tableimage">
+      <br>
+      Winner's Name
+      <br>
+      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
-   </tr>
-   <tr>
-    <td>
-    <p>Winner's Name</p>
-    </td>
-    <td>
-    <p>Winner's Name</p>
-    </td>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-   </tr>
-   <tr>
-     <td>
-      <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-     </td>
-     <td>
-      <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-     </td>
-     <td>
-      <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-     </td>
-     <td>
-      <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-     </td>
-   </tr>
-   <br>
-   <br>
-   <br>
-   <br>
-   <tr>
-    <td>
-     May 2021
-    </td>
-    <td>
-     June 2021
-    </td>
-    <td>
-     July 2021
-    </td>
-    <td>
-     August 2021
-    </td>
-   </tr>
-   <tr>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
-    </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
-    </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
-    </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
-    </td>
-   </tr>
-   <tr>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-   </tr>
-   <tr>
-    <td>
-     <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-    </td>
-    <td>
-     <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-    </td>
-    <td>
-     <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-    </td>
-    <td>
-     <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-    </td>
-   </tr>
-   <tr>
-    <td>
-     September 2021
-    </td>
-    <td>
-     October 2021
-    </td>
-    <td>
-     November 2021
-    </td>
-    <td>
-     December 2021
-    </td>
-   </tr>
-   <tr>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
-    </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
-    </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
-    </td>
-    <td>
-     <img src="images/meme here.png" width="200px" alt="">
-    </td>
-   </tr>
-   <tr>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-    <td>
-     <p>Winner's Name</p>
-    </td>
-   </tr>
-   <tr>
-    <td>
-     <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-    </td>
-    <td>
-     <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-    </td>
-    <td>
-     <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-    </td>
-    <td>
-     <p><a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a></p>
-    </td>
-   </tr>
+  </tr>
+  <tr>
+      <tr>
+        <td class="tableinfo">
+          January 2021
+          <br>
+          <img src="images/meme here.png" class="tableimage">
+          <br>
+          Winner's Name
+          <br>
+          <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
+        </td>
+        <td class="tableinfo">
+          January 2021
+          <br>
+          <img src="images/meme here.png" class="tableimage">
+          <br>
+          Winner's Name
+          <br>
+          <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
+        </td>
+        <td class="tableinfo">
+          January 2021
+          <br>
+          <img src="images/meme here.png" class="tableimage">
+          <br>
+          Winner's Name
+          <br>
+          <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
+        </td>
+        <td class="tableinfo">
+          January 2021
+          <br>
+          <img src="images/meme here.png" class="tableimage">
+          <br>
+          Winner's Name
+          <br>
+          <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
+        </td>
+      </tr>
+  </tr>
   </table>
- </body>
+</body>
 </html>
