--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Plane Hub Premium</title>
- <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Plane Hub Premium</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div id="navbar">
-   <a href="hall of fame.html">Hall Of Fame</a>
- <a href="contact.html">Contact</a>
- <a href="submit.html">Submit</a>
- <a href="index.html">Home</a>
+<div id="navbar">
+  <a href="hall of fame.html">Hall Of Fame</a>
+<a href="contact.html">Contact</a>
+<a href="submit.html">Submit</a>
+<a href="index.html">Home</a>
 </div>
 <script>
- window.onscroll = function () { myFunction() };
+window.onscroll = function () { myFunction() };
 
   var navbar = document.getElementById("navbar");
   var sticky = navbar.offsetTop;
@@ -44,15 +44,22 @@ src="https://docs.google.com/forms/d/e/1FAIpQLSed3IvJpu3Rxe9V48XraObLVVlXMPt4XCY
   <br>
   <table class="hometable">
     <tr>
-      <td><a href="submit.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a></td>
-      <td><a href="contact.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a></td>
-      <td><a href="hall of fame.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a></td>
-    </tr>
-    <tr>
-      <td class="tableinfo">Submit a meme of your own</td>
-      <td class="tableinfo">Contact us if you have questions or suggestions</td>
-      <td class="tableinfo">Visit our previous winners</td>
+      <td>
+        <a href="submit.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
+        <br>
+        Submit a meme of your own
+      </td>
+      <td>
+        <a href="contact.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
+        <br>
+        Contact us if you have questions or suggestions
+      </td>
+      <td>
+        <a href="hall of fame.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
+        <br>
+        Visit our previous winners
+      </td>
     </tr>
   </table>
-  </body>
-  </html>
+</body>
+</html>
