--- a/hall of fame.html
+++ b/hall of fame.html
@@ -4,17 +4,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Plane Hub Premium | Hall Of Fame</title>
+<title>PlaneHub Premium | Hall Of Fame</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="style2.scss">
 </head>
 
 <body>
 <div id="navbar">
-  <a href="hall of fame.html">Hall Of Fame</a>
-  <a href="contact.html">Contact</a>
-  <a href="submit.html">Submit</a>
-  <a href="index.html">Home</a>
+    <a href="index.html">Home</a>
+    <a href="submit.html">Submit</a>
+    <a href="contact.html">Contact</a>
+    <a href="hall of fame.html">Hall Of Fame</a>
 </div>
 <script>
   window.onscroll = function () { myFunction() };
@@ -32,7 +32,7 @@
 </script>
   <br>
   <br>
-  <h1>Hall Of Fame</h1>
+  <h1 class="votetime">Hall of Fame</h1>
   <div style="overflow-x:auto;">
   <table class="hometable">
   <tr>
@@ -41,113 +41,101 @@
       <br>
       <img src="images/meme here.png" class="tableimage">
       <br>
-      Winner's Name
+      No Winner Selected
       <br>
-      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
     <td class="tableinfo">
-        January 2021
+        February 2021
         <br>
         <img src="images/meme here.png" class="tableimage">
         <br>
-        Winner's Name
+        No Winner Selected
         <br>
-        <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
     <td class="tableinfo">
-      January 2021
+      March 2021
       <br>
       <img src="images/meme here.png" class="tableimage">
       <br>
-      Winner's Name
+      No Winner Selected
       <br>
-      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
     <td class="tableinfo">
-      January 2021
+      April 2021
       <br>
       <img src="images/meme here.png" class="tableimage">
       <br>
-      Winner's Name
+      No Winner Selected
       <br>
-      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
   </tr>
   <tr>
     <td class="tableinfo">
-      January 2021
+      May 2021
       <br>
       <img src="images/meme here.png" class="tableimage">
       <br>
-      Winner's Name
+      No Winner Selected
       <br>
-      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
     <td class="tableinfo">
-      January 2021
+      June 2021
       <br>
       <img src="images/meme here.png" class="tableimage">
       <br>
-      Winner's Name
+      No Winner
       <br>
-      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
     <td class="tableinfo">
-      January 2021
+      July 2021
       <br>
       <img src="images/meme here.png" class="tableimage">
       <br>
-      Winner's Name
+      No Winner Selected
       <br>
-      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
     <td class="tableinfo">
-      January 2021
+      August 2021
       <br>
       <img src="images/meme here.png" class="tableimage">
       <br>
-      Winner's Name
+      No Winner Selected
       <br>
-      <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
     </td>
   </tr>
   <tr>
       <tr>
         <td class="tableinfo">
-          January 2021
+          September 2021
           <br>
           <img src="images/meme here.png" class="tableimage">
           <br>
-          Winner's Name
+          No Winner Selected
           <br>
-          <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
         </td>
         <td class="tableinfo">
-          January 2021
+          October 2021
           <br>
           <img src="images/meme here.png" class="tableimage">
           <br>
-          Winner's Name
+          No Winner Selected
           <br>
-          <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
         </td>
         <td class="tableinfo">
-          January 2021
+          November 2021
           <br>
           <img src="images/meme here.png" class="tableimage">
           <br>
-          Winner's Name
+          No Winner Selected
           <br>
-          <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
         </td>
         <td class="tableinfo">
-          January 2021
+          December 2021
           <br>
           <img src="images/meme here.png" class="tableimage">
           <br>
-          Winner's Name
+          No Winner Selected
           <br>
-          <a href="https://www.instagram.com/planehubpremium/">https://www.instagram.com/planehubpremium/</a>
         </td>
       </tr>
   </tr>
