--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Plane Hub Premium | Contact</title>
+<title>PlaneHub Premium | Contact</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="style2.scss">
 </head>
 <body>
   <div id="navbar">
-  <a href="hall of fame.html">Hall Of Fame</a>
-  <a href="contact.html">Contact</a>
-  <a href="submit.html">Submit</a>
-  <a href="index.html">Home</a>
+    <a href="index.html">Home</a>
+    <a href="submit.html">Submit</a>
+    <a href="contact.html">Contact</a>
+    <a href="hall of fame.html">Hall Of Fame</a>
   </div>
   <script>
   window.onscroll = function () { myFunction() };
@@ -37,17 +37,16 @@
   <p class="contact-desc">*Disclaimer: Contact Form does not work on phone*</p>
   <br>
   <label for="First Name">First Name</label>
-  <input type="text" placeholder="First Name" id="first-name">
+  <input type="text" placeholder="First Name" id="first-name"  class="placeholder">
   <label for="last-name">Last Name</label>
-  <input type="text" id="last-name" placeholder="Last Name">
+  <input type="text" id="last-name" placeholder="Last Name" class="placeholder">
   <label for="email">Email</label>
-  <input type="email"id="email" placeholder="example@email.com">
+  <input type="email"id="email" placeholder="example@email.com" class="placeholder">
   <label for="message">Message</label>
-  <textarea id="message" cols="30" rows="10" placeholder="Comments"></textarea>
+  <textarea id="message" cols="30" rows="10" placeholder="Comments" class="placeholder"></textarea>
   <br>
   <br>
   <input type="submit" class="button" value="send">
-
 </form>
 </body>
 </html>
