--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Plane Hub Premium</title>
+<title>PlaneHub Premium</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="navbar">
-  <a href="hall of fame.html">Hall Of Fame</a>
-<a href="contact.html">Contact</a>
-<a href="submit.html">Submit</a>
-<a href="index.html">Home</a>
+    <a href="index.html">Home</a>
+    <a href="submit.html">Submit</a>
+    <a href="contact.html">Contact</a>
+    <a href="hall of fame.html">Hall Of Fame</a>
 </div>
 <script>
 window.onscroll = function () { myFunction() };
@@ -33,15 +33,14 @@ window.onscroll = function () { myFunction() };
 <!--<h2>Vote</h2>
 <br>
 <br>
-<iframe id="frame"
-src="https://docs.google.com/forms/d/e/1FAIpQLSed3IvJpu3Rxe9V48XraObLVVlXMPt4XCYwlGW3Gh0k9Q8bZg/viewform?embedded=true" width="600px" height="752px" frameborder="0" marginheight="10" marginwidth="0" style="float: left;"
->Loading…</iframe> -->
+<iframe
+  src="https://docs.google.com/forms/d/e/1FAIpQLSed3IvJpu3Rxe9V48XraObLVVlXMPt4XCYwlGW3Gh0k9Q8bZg/viewform?embedded=true"
+  width="640" height="700px" frameborder="0" marginheight="0" marginwidth="0" style="text-align: center;background-color: #808080;border-radius: 8px;"></iframe>
+  <br>
+  <br>-->
 <h1 class="votetime">Voting will be available on January 20<sup>th</sup>
-  <br>
-  <br>
-  <h3>In The Meantime...</h3>
-  <br>
-  <br>
+
+  <h3 style="text-align: center;">In The Meantime...</h3>
   <table class="hometable">
     <tr>
       <td>
