--- a/submit.html
+++ b/submit.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Plane Hub Premium | Submit</title>
+<title>PlaneHub Premium | Submit</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style2.scss">
 </head>
 <body>
   <div id="navbar">
-    <a href="hall of fame.html">Hall Of Fame</a>
-    <a href="contact.html">Contact</a>
-    <a href="submit.html">Submit</a>
     <a href="index.html">Home</a>
+    <a href="submit.html">Submit</a>
+    <a href="contact.html">Contact</a>
+    <a href="hall of fame.html">Hall Of Fame</a>
   </div>
   <script>
     window.onscroll = function () { myFunction() };
@@ -30,8 +30,7 @@
   </script>
   <br>
   <br>
-  <br>
-  <h1 class="subdesc">Submit Page</h1>
+  <h1 class="votetime">Submit Your Meme</h1>
   <p class="subdesc">Welcome to the submit page. Here you can submit your favorite <b>original meme</b> and at the end of the month it will be voted by our followers. The creator of the meme that wins will get a shoutuot on our instagram story and will be featured in our <a href="hall of fame.html">Hall Of Fame</a>.
     <br>
     <br>
