--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PlaneHub Premium | Contact</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style2.scss">
+<link rel="shortcut icon" href="images/php logo.png" type="image/x-icon">
 </head>
 <body>
   <div id="navbar">
