--- a/hall of fame.html
+++ b/hall of fame.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PlaneHub Premium | Hall Of Fame</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style2.scss">
+<link rel="shortcut icon" href="images/php logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -34,12 +34,12 @@
   <br>
   <h1 class="votetime">Hall of Fame</h1>
   <div style="overflow-x:auto;">
-  <table class="hometable">
+  <table class="hoftable">
   <tr>
     <td class="tableinfo">
       January 2021
       <br>
-      <img src="images/meme here.png" class="tableimage">
+      <img src="images/no meme selected.png" class="tableimage">
       <br>
       No Winner Selected
       <br>
@@ -47,7 +47,7 @@
     <td class="tableinfo">
         February 2021
         <br>
-        <img src="images/meme here.png" class="tableimage">
+        <img src="images/no meme selected.png" class="tableimage">
         <br>
         No Winner Selected
         <br>
@@ -55,7 +55,7 @@
     <td class="tableinfo">
       March 2021
       <br>
-      <img src="images/meme here.png" class="tableimage">
+      <img src="images/no meme selected.png" class="tableimage">
       <br>
       No Winner Selected
       <br>
@@ -63,7 +63,7 @@
     <td class="tableinfo">
       April 2021
       <br>
-      <img src="images/meme here.png" class="tableimage">
+      <img src="images/no meme selected.png" class="tableimage">
       <br>
       No Winner Selected
       <br>
@@ -73,7 +73,7 @@
     <td class="tableinfo">
       May 2021
       <br>
-      <img src="images/meme here.png" class="tableimage">
+      <img src="images/no meme selected.png" class="tableimage">
       <br>
       No Winner Selected
       <br>
@@ -81,15 +81,15 @@
     <td class="tableinfo">
       June 2021
       <br>
-      <img src="images/meme here.png" class="tableimage">
+      <img src="images/no meme selected.png" class="tableimage">
       <br>
-      No Winner
+      No Winner Selected 
       <br>
     </td>
     <td class="tableinfo">
       July 2021
       <br>
-      <img src="images/meme here.png" class="tableimage">
+      <img src="images/no meme selected.png" class="tableimage">
       <br>
       No Winner Selected
       <br>
@@ -97,7 +97,7 @@
     <td class="tableinfo">
       August 2021
       <br>
-      <img src="images/meme here.png" class="tableimage">
+      <img src="images/no meme selected.png" class="tableimage">
       <br>
       No Winner Selected
       <br>
@@ -108,7 +108,7 @@
         <td class="tableinfo">
           September 2021
           <br>
-          <img src="images/meme here.png" class="tableimage">
+          <img src="images/no meme selected.png" class="tableimage">
           <br>
           No Winner Selected
           <br>
@@ -116,7 +116,7 @@
         <td class="tableinfo">
           October 2021
           <br>
-          <img src="images/meme here.png" class="tableimage">
+          <img src="images/no meme selected.png" class="tableimage">
           <br>
           No Winner Selected
           <br>
@@ -124,7 +124,7 @@
         <td class="tableinfo">
           November 2021
           <br>
-          <img src="images/meme here.png" class="tableimage">
+          <img src="images/no meme selected.png" class="tableimage">
           <br>
           No Winner Selected
           <br>
@@ -132,7 +132,7 @@
         <td class="tableinfo">
           December 2021
           <br>
-          <img src="images/meme here.png" class="tableimage">
+          <img src="images/no meme selected.png" class="tableimage">
           <br>
           No Winner Selected
           <br>
