--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PlaneHub Premium</title>
 <link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" href="images/php logo.png" type="image/x-icon">
 </head>
 <body>
 <div id="navbar">
@@ -38,7 +39,7 @@ window.onscroll = function () { myFunction() };
   width="640" height="700px" frameborder="0" marginheight="0" marginwidth="0" style="text-align: center;background-color: #808080;border-radius: 8px;"></iframe>
   <br>
   <br>-->
-<h1 class="votetime">Voting will be available on January 20<sup>th</sup>
+  <h1 class="votetime">Voting will be available on January 20<sup>th</sup>
 
   <h3 style="text-align: center;">In The Meantime...</h3>
   <table class="hometable">
@@ -51,7 +52,7 @@ window.onscroll = function () { myFunction() };
       <td>
         <a href="contact.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
         <br>
-        Contact us if you have questions or suggestions
+        Contact us if you have any questions or suggestions
       </td>
       <td>
         <a href="hall of fame.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
