--- a/submit.html
+++ b/submit.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PlaneHub Premium | Submit</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style2.scss">
+  <link rel="shortcut icon" href="images/php logo.png" type="image/x-icon">
 </head>
 <body>
   <div id="navbar">
@@ -29,9 +29,8 @@
     }
   </script>
   <br>
-  <br>
   <h1 class="votetime">Submit Your Meme</h1>
-  <p class="subdesc">Welcome to the submit page. Here you can submit your favorite <b>original meme</b> and at the end of the month it will be voted by our followers. The creator of the meme that wins will get a shoutuot on our instagram story and will be featured in our <a href="hall of fame.html">Hall Of Fame</a>.
+  <p class="subdesc">Welcome to the submit page. Here you can submit your favorite <b>original meme</b> and at the end of the month it will be voted by our followers. The creator of the meme that wins will get a shoutuot on our instagram story and will be featured in our <br><a href="hall of fame.html">Hall Of Fame</a>.
     <br>
     <br>
     <br>
