--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ window.onscroll = function () { myFunction() };
 </script>
 <br>
 <h1 class="welcome" >Welcome to PlaneHub Premium</h1>
-<br>
-<!--<h2>Vote</h2>
+<!--<br>
+<h2>Vote</h2>
 <br>
 <br>
 <iframe
@@ -52,7 +52,7 @@ window.onscroll = function () { myFunction() };
       <td>
         <a href="contact.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
         <br>
-        Contact us if you have any questions or suggestions
+        Contact if you have questions
       </td>
       <td>
         <a href="hall of fame.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
