front images fixed again

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ window.onscroll = function () { myFunction() };
       <td>
         <a href="submit.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
         <br>
-        Submit a meme of your own
+        Submit your meme
       </td>
       <td>
         <a href="contact.html"><img class="tableimage" src="images/Chalkboard Plane cropped.jpg" alt=""></a>
