--- a/hall of fame.html
+++ b/hall of fame.html
@@ -30,6 +30,20 @@
   }
   }
 </script>
+<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function () {
+    var t = document.createElement('script');
+    t.type = 'text/javascript';
+    t.async = true;
+    t.id = 'gauges-tracker';
+    t.setAttribute('data-site-id', '5ffeffee79882c01e80ed7f2');
+    t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+    t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
   <br>
   <br>
   <h1 class="votetime">Hall of Fame</h1>
