--- a/submit.html
+++ b/submit.html
@@ -28,6 +28,20 @@
     }
     }
   </script>
+  <script type="text/javascript">
+    var _gauges = _gauges || [];
+    (function () {
+      var t = document.createElement('script');
+      t.type = 'text/javascript';
+      t.async = true;
+      t.id = 'gauges-tracker';
+      t.setAttribute('data-site-id', '5ffeffee79882c01e80ed7f2');
+      t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+      t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(t, s);
+    })();
+  </script>
   <br>
   <h1 class="votetime">Submit Your Meme</h1>
   <p class="subdesc">Welcome to the submit page. Here you can submit your favorite <b>original meme</b> and at the end of the month it will be voted by our followers. The creator of the meme that wins will get a shoutuot on our instagram story and will be featured in our <br><a href="hall of fame.html">Hall Of Fame</a>.
