--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <title>PlaneHub Premium</title>
 <link rel="stylesheet" href="style.css">
 <link rel="shortcut icon" href="images/php logo.png" type="image/x-icon">
+<script type="application/javascript">
+  (function (b, o, n, g, s, r, c) { if (b[s]) return; b[s] = {}; b[s].scriptToken = "Xy0xOTE4ODYyMw"; b[s].callsQueue = []; b[s].api = function () { b[s].callsQueue.push(arguments); }; r = o.createElement(n); c = o.getElementsByTagName(n)[0]; r.async = 1; r.src = g; r.id = s + n; c.parentNode.insertBefore(r, c); })(window, document, "script", "https://cdn.oribi.io/Xy0xOTE4ODYyMw/oribi.js", "ORIBI");
+</script>
 </head>
 <body>
 <div id="navbar">
@@ -27,20 +30,6 @@ window.onscroll = function () { myFunction() };
     navbar.classList.remove("sticky");
   }
   }
-</script>
-<script type="text/javascript">
-  var _gauges = _gauges || [];
-  (function () {
-    var t = document.createElement('script');
-    t.type = 'text/javascript';
-    t.async = true;
-    t.id = 'gauges-tracker';
-    t.setAttribute('data-site-id', '5ffeffee79882c01e80ed7f2');
-    t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
-    t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(t, s);
-  })();
 </script>
 <br>
 <h1 class="welcome" >Welcome to PlaneHub Premium</h1>
